@@ -2,6 +2,12 @@ v0.3.0:
 * Fixed error with seatalk flag in serial.c
 * Fixed makefile for bsd/macos
 * Improved error reporting for broadcast interfaces
+* Fix failure-to-exit bug when using tcp server
+* Special handling of and improved support for FIFOs
+* Ignore SIGPIPE to avoid crashes writing to FIFOs
+* Added append mode for output files
+* Enable use of redirected standard input and output in background mode
+* Added persist flag for FIFOs and TCP client connections
 
 v0.2.10: 31st March 2013
 * Fixed crash when interface error condition encountered on startup
